--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -77,7 +77,7 @@
       </div>
 
       <div class="stat-card">
-        <h2 class="card-title">Top Projetos (Pendentes)</h2>
+        <h2 class="card-title">Projetos com pendências</h2>
         <div class="stat-group" id="tarefas-por-projeto-lista">
           <p class="console-text">C:\\> Calculando...</p>
         </div>
@@ -86,11 +86,11 @@
       <div class="stat-card full-width-card">
         <h2 class="card-title">Filtro Temporal (Protocolo Search)</h2>
         
-        <div class="form-hacker search-grid-layout">
-          <div class="form-group">
-            <label class="console-label">>> Data Início:</label>
-            <input type="date" id="busca-inicio" class="form-input" style="width: 100%;">
-          </div>
+      <div class="form-hacker search-grid-layout">
+        <div class="form-group">
+          <label class="console-label">>> Data Início:</label>
+          <input type="date" id="busca-inicio" class="form-input">
+        </div>
           
           <div class="form-group">
             <label class="console-label">>> Data Fim:</label>
